force-app/main/default/objects/Contact/fields/First_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Date__c</fullName>
    <label>First Touch Date</label>
    <type>DateTime</type>
</CustomField>