force-app/main/default/objects/Contact/fields/First_Touch_Lead_Channel_Detail__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_Lead_Channel_Detail__c</fullName>
    <label>First Touch Lead Channel Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPC</fullName>
            </value>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Content Download</fullName>
            </value>
            <value>
                <fullName>Cold Email</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>