force-app/main/default/objects/Contact/validationRules/Inbound_Google_PPC_SEO_First.validationRule-meta.xml
<ValidationRule>
    <fullName>Inbound_Google_PPC_SEO_First</fullName>
    <active>true</active>
    <description>When First Touch Source is Inbound and Channel is Google, Detail must be PPC or SEO</description>
    <errorConditionFormula>AND(
    ISPICKVAL(First_Touch_Lead_Source__c, "Inbound"),
    ISPICKVAL(First_Touch_Lead_Channel__c, "Google"),
    NOT(OR(
        ISPICKVAL(First_Touch_Lead_Channel_Detail__c, "PPC"),
        ISPICKVAL(First_Touch_Lead_Channel_Detail__c, "SEO")
    ))
)</errorConditionFormula>
    <errorMessage>When channel is Google (Inbound), detail must be PPC or SEO.</errorMessage>
</ValidationRule>