force-app/main/default/objects/Contact/validationRules/Inbound_No_Outbound_Ch_Last.validationRule-meta.xml
<ValidationRule>
    <fullName>Inbound_No_Outbound_Ch_Last</fullName>
    <active>true</active>
    <description>Prevents inbound attribution from using outbound-only channels (ZoomInfo, Apollo, Outreach) for Last Touch</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Last_Touch_Lead_Source__c, "Inbound"),
    OR(
        ISPICKVAL(Last_Touch_Lead_Channel__c, "ZoomInfo"),
        ISPICKVAL(Last_Touch_Lead_Channel__c, "Apollo"),
        ISPICKVAL(Last_Touch_Lead_Channel__c, "Outreach")
    )
)</errorConditionFormula>
    <errorMessage>Inbound attribution cannot use outbound channels (ZoomInfo/Apollo/Outreach).</errorMessage>
</ValidationRule>